# cpp-university-assigment

./: CMakeLists.txt  README.md  Test.txt  main.cpp
database/: Business.csv  Department.csv  Readme.txt  Workers.csv
gui/: AbstractEntityWindow.cpp  AbstractEntityWindow.h  AbstractGroup.cpp  AbstractGroup.h  AbstractTableModel.cpp  BusinessGroup.cpp  BusinessGroup.h  BusinessTable.cpp  BusinessTable.h  BusinessTableModel.cpp  BusinessTableModel.h  BusinessWindow.cpp  BusinessWindow.h  MainWindow.cpp  MainWindow.h  NewEntityBusiness.cpp  NewEntityBusiness.h  Table.cpp
gui/AbstractDisplay/: AbstractNavigationDisplayModel.cpp  AbstractNavigationDisplayModel.h  AbstractNavigatorImplementation.cpp  AbstractNavigatorImplementation.h  NavigationDisplay.cpp  NavigationDisplay.h
gui/AbstractTable/: Table.cpp  (+3 more)
logic/: CRUD.cpp  CRUD.h  CRUDBusiness.cpp  CRUDBusiness.h  CRUDDepartment.cpp  CRUDDepartment.h  CRUDWorker.cpp  CRUDWorker.h
model/: AnnualLeave.cpp  AnnualLeave.h  Business.cpp  Business.h  Clerk.cpp  Clerk.h  Date.cpp  Date.h  Department.cpp  Department.h  Driver.cpp  Driver.h  Person.cpp  Person.h  Warehouseman.cpp  Warehouseman.h  Worker.cpp  Worker.h
service/: BusinessMultiService.cpp  BusinessMultiService.h  BusinessService.cpp  BusinessService.h  CsvFormatter.cpp  CsvFormatter.h  CsvFormatterUtil.cpp  CsvFormatterUtil.h  DepartmentMultiService.cpp  DepartmentMultiService.h  DepartmentService.cpp  DepartmentService.h  Entity.cpp  Entity.h  MultiService.cpp  MultiService.h  Service.cpp  Service.h  WorkerService.cpp  WorkerService.h
util/: Util.cpp  Util.h
(+26 files in other folders)
